# PPO

./: .gitmodules  README.md
code/: CMakeLists.txt  main.cpp
code/bl/: CMakeLists.txt
code/bl/inc/: AuthUserSingleton.h  CurrentRoleSingleton.h  ErrorObj.h
code/bl/inc/facade/: IFacadeErrorProcessor.h  IMainFacade.h  IMatchFacade.h  ITournamentFacade.h  IUserFacade.h  MainFacade.h  MatchFacade.h  TournamentFacade.h  UserFacade.h
code/bl/inc/transactions/: IMatchTransactionFactory.h  ITournamentTransactionFactory.h  IUserTransactionFactory.h  MatchTransactionFactory.h  TournamentTransactionFactory.h  UserTransactionFactory.h
code/bl/src/: ErrorObj.cpp
code/bl/src/facade/: MainFacade.cpp  MatchFacade.cpp  TournamentFacade.cpp  UserFacade.cpp
code/bl/src/transactions/: MatchTransactionFactory.cpp  TournamentTransactionFactory.cpp  UserTransactionFactory.cpp
code/bl/tests/: MatchTransactionFactoryTests.cpp  TournamentTransactionFactoryTests.cpp  UserTransactionFactoryTests.cpp
code/db/: CMakeLists.txt  db_conf.json
code/db/inc/private/cppconn/converters/: ResultConverter.h
code/db/inc/private/pqxx/converters/: ResultConverter.h
code/db/inc/public/: ActiveRoleSingleton.h  IConnection.h  IDatabaseAdapter.h  IDatabaseExecResult.h  PostgreSqlAdapter.h  SqlConnection.h
code/db/inc/public/mysql/: MySqlAdapter.h
code/db/inc/public/repositories/: IRepository.h  IRepositoryFactory.h  IRepositoryFactoryCreator.h  IRepositoryInitializer.h  Identity.h  MatchRepository.h  Repository.h  RepositoryFactory.h  RepositoryFactoryCreator.h  TournamentParticipantsRepository.h  TournamentRepository.h  UserRepository.h
code/db/inc/public/repositories/roles/: CommonUserRole.h  GuestRole.h  IRole.h  RolesConverter.h  TournamentLeaderRole.h  TournamentParticipantRole.h
code/db/inc/public/utility/: BaseDefines.h  FieldSet.h  ICommandSource.h  JsonConfiguration.h  MySqlCommandSource.h  PostgreSqlCommandSource.h  TableAbstractValue.h
code/db/src/: PostgreSqlAdapter.cpp  SqlConnection.cpp
code/db/src/mysql/: MySqlAdapter.cpp
code/db/src/repositories/: MatchRepository.cpp  RepositoryFactory.cpp  RepositoryFactoryCreator.cpp  TournamentParticipantsRepository.cpp  TournamentRepository.cpp  UserRepository.cpp
code/db/src/repositories/roles/: CommonUserRole.cpp  GuestRole.cpp  RolesConverter.cpp  TournamentLeaderRole.cpp  TournamentParticipantRole.cpp
code/db/src/utility/: JsonConfiguration.cpp  MySqlCommandSource.cpp  PostgreSqlCommandSource.cpp  TableAbstractValue.cpp
code/db/tests/: FieldSetTests.cpp  NotMandatoryFieldTests.cpp  TestPostgreSqlCommandSource.cpp  TestSqlConnection.cpp  TestTableAbstractValue.cpp
code/db/tests/integration/: integration_tests.cpp
code/db/tests/mocks/: MockCommandSource.h  MockDatabaseAdapter.h  MockDatabaseExecResult.h  MockRepository.h  MockRepositoryFactory.h  MockRepositoryFactoryCreator.h
code/transport/: CMakeLists.txt  CriticalError.h  IIdentifiable.h  Logger.cpp  Logger.h  Match.h  NotCriticalError.h  NotMandatoryField.h  Roles.h  Tournament.h  TournamentParticipant.h  User.h  trash.cpp
code/ui/: CMakeLists.txt  UI
code/ui/inc/: CdkCoordinator.h  ICoordinator.h
code/ui/inc/windows/: IAuthorizationWindow.h  IMainMenuWindow.h  ISingUpWindow.h  ITournamentCreationWindow.h  ITournamentWindow.h  IUpdateUserWindow.h  IWindow.h  IWindowsFactory.h
code/ui/inc/windows/cdk/: AuthorizationWindow.h  CdkWindowsFactory.h  GuestTournamentWindow.h  LeaderStartedTournamentWindow.h  LeaderWaitTournamentWindow.h  MainMenuWindow.h  ParticipantTournamentWindow.h  SignUpWindow.h  TournamentCreationWindow.h  UpdateUserWindow.h
code/ui/inc/windows/cdk/commonUser/: CommonUserWindowsFactory.h
code/ui/src/: CdkCoordinator.cpp  main.cpp
code/ui/src/commonUser/: CommonUserWindowsFactory.cpp
code/ui/src/windows/cdk/: AuthorizationWindow.cpp  CdkWindowsFactory.cpp  GuestTournamentWindow.cpp  LeaderStartedTournamentWindow.cpp  LeaderWaitTournamentWindow.cpp  MainMenuWindow.cpp  ParticipantTournamentWindow.cpp  SignUpWindow.cpp  TournamentCreationWindow.cpp  UpdateUserWindow.cpp
lab_02/: Components.drawio  DB_entities.drawio
lab_06/: fullUml.vpp
